RESOLVED FIXED 258705
Fix crash in WebPageProxy::wheelEventHandlingCompleted()
https://bugs.webkit.org/show_bug.cgi?id=258705
Summary Fix crash in WebPageProxy::wheelEventHandlingCompleted()
Simon Fraser (smfr)
Reported 2023-06-29 17:53:35 PDT
Fix null deref in WebPageProxy::wheelEventHandlingCompleted
Attachments
Simon Fraser (smfr)
Comment 1 2023-06-29 17:53:51 PDT
Simon Fraser (smfr)
Comment 2 2023-06-29 17:56:36 PDT
EWS
Comment 3 2023-07-06 12:51:09 PDT
Committed 265817@main (530a64fb1657): <https://commits.webkit.org/265817@main> Reviewed commits have been landed. Closing PR #15429 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.